[package]
name = "facts"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "cookies"] }
scraper = "0.20"
regex = "1.10"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
url = "2.5"
rand = "0.8"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
